; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/atf/atf-c/extr_macros_test.c_create_ctl_file.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/atf/atf-c/extr_macros_test.c_create_ctl_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@O_CREAT = common dso_local global i32 0, align 4
@O_WRONLY = common dso_local global i32 0, align 4
@O_TRUNC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @create_ctl_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @create_ctl_file(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call i32 @atf_fs_path_init_fmt(i32* %3, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* %4)
  %6 = call i32 @RE(i32 %5)
  %7 = call i32 @atf_fs_path_cstring(i32* %3)
  %8 = load i32, i32* @O_CREAT, align 4
  %9 = load i32, i32* @O_WRONLY, align 4
  %10 = or i32 %8, %9
  %11 = load i32, i32* @O_TRUNC, align 4
  %12 = or i32 %10, %11
  %13 = call i32 @open(i32 %7, i32 %12, i32 420)
  %14 = icmp ne i32 %13, -1
  %15 = zext i1 %14 to i32
  %16 = call i32 @ATF_REQUIRE(i32 %15)
  %17 = call i32 @atf_fs_path_fini(i32* %3)
  ret void
}

declare dso_local i32 @RE(i32) #1

declare dso_local i32 @atf_fs_path_init_fmt(i32*, i8*, i8*) #1

declare dso_local i32 @ATF_REQUIRE(i32) #1

declare dso_local i32 @open(i32, i32, i32) #1

declare dso_local i32 @atf_fs_path_cstring(i32*) #1

declare dso_local i32 @atf_fs_path_fini(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
